tests/neg/i4453.scala
class x0 { var x0 == _ * // error spread operator `*` not allowed here // error '=' expected
  // error: == cannot be used as an extractor in a pattern because it lacks an unapply or unapplySeq method